Небольшие правки по вёрстке

--- a/ElReg/elreg_app/templates/patient.html
+++ b/ElReg/elreg_app/templates/patient.html
@@ -89,7 +89,7 @@
     </fieldset>
 
     <input type="checkbox" id="confirm" name="confirm" value="confirm" />
-    Я даю своё согласие на автоматизированную обработку указанной информации, распространяющейся на осуществление всех действий с ней, включая сбор, передачу по сетям связи общего назначения, накопление, хранение, обновление, изменение, использование, обезличивание, блокирование, уничтожение и обработку посредством внесения в электронную базу данных, систематизации, включения в списки и отчетные формы.
+    <label for="confirm">Я даю своё согласие на автоматизированную обработку указанной информации, распространяющейся на осуществление всех действий с ней, включая сбор, передачу по сетям связи общего назначения, накопление, хранение, обновление, изменение, использование, обезличивание, блокирование, уничтожение и обработку посредством внесения в электронную базу данных, систематизации, включения в списки и отчетные формы.</label>
     <br /><br />
 
 {#    <table class="footer_btn">#}
