Изменения по стилям модального диалога

--- a/ElReg/elreg_app/templates/medical_institution.html
+++ b/ElReg/elreg_app/templates/medical_institution.html
@@ -7,7 +7,7 @@
     <fieldset>
     <legend><strong>Поиск ЛПУ:</strong></legend>
         <div class="field">
-            <label for="search_lpu">Наименование ЛПУ:</label>
+            <label for="search_lpu"><nobr>Наименование ЛПУ:</nobr></label>
             <input type="text" name="search" id="search_lpu" maxlength="100" size="85" onkeyup="searchLpu()" />
         <div class="field">
         </div>
