--- a/ElReg/elreg_app/templates/medical_institution.html
+++ b/ElReg/elreg_app/templates/medical_institution.html
@@ -1,101 +1,96 @@
 {% extends "base.html" %}
 
-
 {% block content %}
-
-<form id="form" action="" method="post" name="frm">
-    <fieldset>
-    <legend><strong>Поиск ЛПУ:</strong></legend>
-        <div class="field">
-            <label for="search_lpu"><nobr>Наименование ЛПУ:</nobr></label>
-            <input type="text" name="search" id="search_lpu" maxlength="100" size="85" onkeyup="searchLpu()" />
-        <div class="field">
-        </div>
-            <label for="search_gorod">Город:</label>
-            <input type="text" name="search" id="search_gorod" maxlength="100" size="85" onkeyup="searchGorod()" />
-        <div class="field">
-        </div>
-            <label for="search_rayon">Район:</label>
-            <input type="text" name="search" id="search_rayon" maxlength="100" size="85" onkeyup="searchRayon()" />
-        </div>
-        <br />
-        <table id="search_table" class="no_search">
-        </table>
-    </fieldset>
-</form>
-
+<legend><h3>Поиск ЛПУ:</h3></legend>
+<div class="row-fluid well well-small">
+    <div class="span6">
+        <form id="form" action="" method="post" name="frm" class="form-horizontal">
+            <fieldset>
+                <div class="control-group">
+                    <label class="control-label" for="search_lpu">Наименование ЛПУ:</label>
+                    <div class="controls">
+                        <input type="text" name="search" id="search_lpu" maxlength="100" class="input-block-level" onkeyup="searchLpu()" />
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="search_gorod">Город:</label>
+                    <div class="controls">
+                        <input type="text" name="search" id="search_gorod" maxlength="100" class="input-block-level" onkeyup="searchGorod()" value="{{ current_region }}" />
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="search_rayon">Район:</label>
+                    <div class="controls">
+                        <input type="text" name="search" id="search_rayon" maxlength="100" class="input-block-level" onkeyup="searchRayon()" />
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</div>
 {% if hospitals_list %}
-<br />
-<p>
-    Муниципальное образование: {{ current_region }}
-</p>
-
-<table>
-    {% for hospital in hospitals_list %}
-    <tr>
-        <td>
-            <a href="{% url subdivision %}{{ hospital.uid|slice:":2"|cut:"/" }}/">
-                {{ hospital.title }}
-            </a>
-        </td>
-    </tr>
-    {% endfor %}
-</table>
+<div class="row-fluid">
+    <div class="span12">
+        <ul id="search_table" class="nav nav-tabs nav-stacked">
+            {% for hospital in hospitals_list %}
+            <li><a href="{% url subdivision %}{{ hospital.uid|slice:":2"|cut:"/" }}/">{{ hospital.title }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endif %}
+<a href="{% url index %}" class="btn btn-primary btn-large">Вернуться</a>
 
-<p>
-    <a href="{% url index %}" class="container">
-        <img src="{{ STATIC_URL }}/static/images/back_btn.gif" alt="Назад">
-    </a>
-</p>
-
-
-
-<script type="text/javascript">
-    function searchLpu() {
-        var search_lpu = $('#search_lpu').val();
-        var search_gorod = $('#search_gorod').val();
-        var search_rayon = $('#search_rayon').val();
-        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
-            var $items = [];
-            $.each(data, function(key, val) {
-                $items.push('<tr><td><a href="{% url subdivision %}' + key + '/">' + val + '</a></td></tr>');
+    <script type="text/javascript">
+        function searchLpu() {
+            $("#search_table").html("");
+            var search_lpu = $('#search_lpu').val();
+            var search_gorod = $('#search_gorod').val();
+            var search_rayon = $('#search_rayon').val();
+            if (!search_lpu && !search_gorod && !search_rayon){
+                return false;
+            }
+            $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
+                var $items = [];
+                $.each(data, function(key, val) {
+                    $items.push('<li><a href="{% url subdivision %}'+ url_subdivision + key + '/">' + val + '</a></li>');
+                });
+                $("#search_table").html($items.join('')).fadeIn('fast');
             });
-            $('table.search tr').hide();
-            $("#search_table").attr("class", "search");
-            $($items.join('')).fadeIn('fast').appendTo('table.search');
-        });
-    }
+        }
 
-    function searchGorod() {
-        var search_lpu = $('#search_lpu').val();
-        var search_gorod = $('#search_gorod').val();
-        var search_rayon = $('#search_rayon').val();
-        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
-            var $items = [];
-            $.each(data, function(key, val) {
-                $items.push('<tr><td><a href="{% url subdivision %}' + key + '/">' + val + '</a></td></tr>');
+        function searchGorod() {
+            $("#search_table").html("");
+            var search_lpu = $('#search_lpu').val();
+            var search_gorod = $('#search_gorod').val();
+            var search_rayon = $('#search_rayon').val();
+            if (!search_lpu && !search_gorod && !search_rayon){
+                return false;
+            }
+            $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
+                var $items = [];
+                $.each(data, function(key, val) {
+                    $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
+                });
+                $("#search_table").html($items.join('')).fadeIn('fast');
             });
-            $('table.search tr').hide();
-            $("#search_table").attr("class", "search");
-            $($items.join('')).fadeIn('fast').appendTo('table.search');
-        });
-    }
+        }
 
-    function searchRayon() {
-        var search_lpu = $('#search_lpu').val();
-        var search_gorod = $('#search_gorod').val();
-        var search_rayon = $('#search_rayon').val();
-        $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
-            var $items = [];
-            $.each(data, function(key, val) {
-                $items.push('<tr><td><a href="{% url subdivision %}' + key + '/">' + val + '</a></td></tr>');
+        function searchRayon() {
+            $("#search_table").html("");
+            var search_lpu = $('#search_lpu').val();
+            var search_gorod = $('#search_gorod').val();
+            var search_rayon = $('#search_rayon').val();
+            if (!search_lpu && !search_gorod && !search_rayon){
+                return false;
+            }
+            $.getJSON("/search/", {search_lpu: search_lpu, search_gorod: search_gorod, search_rayon: search_rayon}, function(data) {
+                var $items = [];
+                $.each(data, function(key, val) {
+                    $items.push('<li><a href="{% url subdivision %}' + key + '/">' + val + '</a></li>');
+                });
+                $("#search_table").html($items.join('')).fadeIn('fast');
             });
-            $('table.search tr').hide();
-            $("#search_table").attr("class", "search");
-            $($items.join('')).fadeIn('fast').appendTo('table.search');
-        });
-    }
-</script>
-
+        }
+    </script>
 {% endblock %}
