--- a/ElReg/elreg_app/templates/patient.html
+++ b/ElReg/elreg_app/templates/patient.html
@@ -1,18 +1,17 @@
 {% extends "base.html" %}
 
-
 {% block content %}
-
-<div id="info">
-<fieldset>
-<legend><strong>Информация о записи:</strong></legend>
-<p>Лечебное учреждение: {{ current_lpu_title }}, {{ address }}, телефон: {{ current_lpu_phone }}</p>
-<p>Специализация: {{ speciality }}</p>
-<p>Врач: {{ doctor }}</p>
-
-<p>Дата и время приёма: {{ date }} {{ start_time }} - {{ finish_time }}</p>
-</fieldset>
-</div>
+<legend xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"><big>Информация о записи:</big></legend>
+<blockquote>
+    <dl class="dl-horizontal">
+        <dt>Лечебное учреждение:</dt><dd>{{ current_lpu_title }}</dd>
+        <dd>{{ address }}</dd>
+        <dt>Телефон:</dt><dd>{{ current_lpu_phone }}</dd>
+        <dt>Специализация:</dt><dd>{{ speciality }}</dd>
+        <dt>Врач:</dt><dd>{{ doctor }}</dd>
+        <dt>Дата и время приёма:</dt><dd>{{ date }} {{ start_time }} - {{ finish_time }}</dd>
+    </dl>
+</blockquote>
 <p>
     <font color="red">
     {% if errors %}
@@ -25,73 +24,96 @@
 </p>
 
 {% if ticketPatient_err %}
+    <div id="dialog-modal" class="alert alert-error" title="Ошибка записи">
+{#    <button type="button" class="close" data-dismiss="alert">&times;</button>#}
+    <strong>Ошибка записи!</strong>
+    {{ ticketPatient_err }}
+    </div>
     <script type="text/javascript">
-        $(function() {
-            $( "#dialog-modal" ).dialog({
-                modal: true,
-                buttons: {
-                    "Закрыть": function() {
-                        $( this ).dialog( "close" );
-                    }
-                }
-            });
-        });
+        $(".alert").alert();
     </script>
-    <div id="dialog-modal" title="Ошибка записи">{{ ticketPatient_err }}</div>
 {% endif %}
 
-<form id="patient_form" action="" method="post" name="frm">
-    <fieldset>
-    <legend><strong>Данные посетителя:</strong></legend>
-        <div class="field">
-            <label for="lastName">Фамилия:*</label>
-            <input type="text" name="lastName" id="lastName" value="{{ lastName }}" maxlength="40" size="30" autocomplete="on" placeholder="Иванов" />
-        </div>
+<div class="well well-small">
+<form id="patient_form" action="" method="post" name="frm" class="form-horizontal">
+    <input type=hidden name=ticket value="{{ ticket }}" />
+    <input type=hidden name=flag value=True />
 
-        <div class="field">
-            <label for="firstName">Имя:*</label>
-            <input type="text" name="firstName" id="firstName" value="{{ firstName }}" maxlength="40" size="30" autocomplete="on" placeholder="Иван" />
+    <legend><big>Данные посетителя</big></legend>
+    <div class="control-group">
+        <label class="control-label" for="lastName">Фамилия<span class="text-error">*</span></label>
+        <div class="controls">
+            <input type="text" class="span4" name="lastName" id="lastName" value="{{ lastName }}" autocomplete="on" placeholder="Иванов" />
         </div>
-
-        <div class="field">
-            <label for="patronymic">Отчество:*</label>
-            <input type="text" name="patronymic" id="patronymic" value="{{ patronymic }}" maxlength="40" size="30" autocomplete="on" placeholder="Иванович" />
+    </div>
+    <div class="control-group">
+        <label class="control-label" for="firstName">Имя<span class="text-error">*</span></label>
+        <div class="controls">
+            <input type="text" class="span4" name="firstName" id="firstName" value="{{ firstName }}" maxlength="40" size="30" autocomplete="on" placeholder="Иван" />
         </div>
+    </div>
 
-        <div class="field">
-            <label for="dd">Дата рождения:*</label>
-            <input type="text" name="dd" id="dd" value="{{ dd }}" maxlength="2" size="2" autocomplete="on" placeholder="01" />
-            <input type="text" name="mm" id="mm" value="{{ mm }}" maxlength="2" size="2" autocomplete="on" placeholder="12" />
-            <input type="text" name="yy" id="yy" value="{{ yy }}" maxlength="4" size="4" autocomplete="on" placeholder="2001" />
+    <div class="control-group">
+        <label class="control-label" for="patronymic">Отчество<span class="text-error">*</span></label>
+        <div class="controls">
+            <input type="text" class="span4" name="patronymic" id="patronymic" value="{{ patronymic }}" maxlength="40" size="30" autocomplete="on" placeholder="Иванович" />
         </div>
+    </div>
 
-        <div class="field">
-            <label for="radio1">Пол:*</label>
-            <input type="radio" name="radio" id="radio1" value="M" /> М
-            <input type="radio" name="radio" id="radio2" value="F" /> Ж
+    <div class="control-group">
+        <label class="control-label" for="dd">Дата рождения<span class="text-error">*</span></label>
+        <div class="controls">
+            <input type="text" class="span1" name="dd" id="dd" value="{{ dd }}" maxlength="2" size="2" autocomplete="on" placeholder="01" />
+            <input type="text" class="span1" name="mm" id="mm" value="{{ mm }}" maxlength="2" size="2" autocomplete="on" placeholder="12" />
+            <input type="text" class="span1" name="yy" id="yy" value="{{ yy }}" maxlength="4" size="4" autocomplete="on" placeholder="2001" />
         </div>
+    </div>
 
-        <div class="field">
-            <label for="policy1">Серия и номер полиса:*</label>
-            <input type="text" name="policy1" id="policy1" value="{{ policy1 }}" maxlength="10" size="2" autocomplete="on" placeholder="12" />
-            <input type="text" name="policy2" id="policy2" value="{{ policy2 }}" maxlength="16" size="20" autocomplete="on" placeholder="1234567890123456" />
+    <div class="control-group">
+        <label class="control-label" for="radio1">Пол<span class="text-error">*</span></label>
+        <div class="controls">
+            <input type="radio" name="radio" id="radio1" value="M" {% if request.POST.radio == 'M' %}checked="checked"{% endif %} /> М
+            <input type="radio" name="radio" id="radio2" value="F" {% if request.POST.radio == 'F' %}checked="checked"{% endif %} /> Ж
         </div>
+    </div>
 
-        <div class="field">
+    <div class="control-group">
+        <label class="control-label" for="policy1">Серия и номер полиса<span class="text-error">*</span></label>
+        <div class="controls">
+            <input type="text" name="policy1" id="policy1" value="{{ policy1 }}" maxlength="10" size="2" autocomplete="on" placeholder="12" class="span1" />
+            <input type="text" class="span3" name="policy2" id="policy2" value="{{ policy2 }}" maxlength="16" size="20" autocomplete="on" placeholder="1234567890123456" />
+        </div>
+    </div>
+
+    <div class="control-group">
+        <div class="controls">
             <input id="chb" value="0" type="checkbox" /> - отправить информацию о записи на электронный адрес
         </div>
-
-        <div class="field">
-            <label for="email">Адрес электронной почты:</label>
-            <input type="text" name="email" id="email" value="{{ userEmail }}" maxlength="50" size="35" disabled="disabled" autocomplete="on" placeholder="example@email.ru" />
         </div>
-        * - поля, обязательные для заполнения
-    </fieldset>
+    <div class="control-group">
+        <label class="control-label" for="email">Адрес электронной почты</label>
+        <div class="controls">
+            <input type="text" class="span4" name="email" id="email" value="{{ userEmail }}" maxlength="50" size="35" disabled="disabled" autocomplete="on" placeholder="example@email.ru" />
+        </div>
+    </div>
 
-    <input type="checkbox" id="confirm" name="confirm" value="confirm" />
-    <label for="confirm">Я даю своё согласие на автоматизированную обработку указанной информации, распространяющейся на осуществление всех действий с ней, включая сбор, передачу по сетям связи общего назначения, накопление, хранение, обновление, изменение, использование, обезличивание, блокирование, уничтожение и обработку посредством внесения в электронную базу данных, систематизации, включения в списки и отчетные формы.</label>
-    <br /><br />
+    <div class="control-group">
+        <div class="controls">
+            <span class="text-error">* - поля, обязательные для заполнения</span>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span7">
+            <label for="confirm">
+                <input type="checkbox" id="confirm" name="confirm" value="confirm" /> Я даю своё согласие на автоматизированную обработку указанной информации, распространяющейся на осуществление всех действий с ней, включая сбор, передачу по сетям связи общего назначения, накопление, хранение, обновление, изменение, использование, обезличивание, блокирование, уничтожение и обработку посредством внесения в электронную базу данных, систематизации, включения в списки и отчетные формы.
+            </label>
+        </div>
+    </div>
 
+    <div class="form-actions">
+        <button type="submit" id="button-submit" class="btn btn-success disabled">Подтвердить</button>
+        <a href="{% url time %}" class="btn">Отменить</a>
+    </div>
 {#    <table class="footer_btn">#}
 {#        <tr>#}
 {#            <td>#}
@@ -106,17 +128,8 @@
 {#            </td>#}
 {#        </tr>#}
 {#    </table>#}
-
-    <a href="{% url time %}" class="container">
-        <img src="{{ STATIC_URL }}/static/images/back_btn.gif" alt="Назад">
-    </a>
-
-    <input type="submit" id="button-submit" style="width:102px;height:40px;padding-top:25px;margin-left:760px" class="sendsubmit" name="send" value="Подтвердить" disabled />
-    <input type=hidden name=ticket value="{{ ticket }}" />
-    <input type=hidden name=flag value=True />
-
-
-
-
 </form>
+</div>
+<a href="{% url time %}" class="btn btn-primary btn-large">Вернуться</a>
+
 {% endblock %}
