--- a/ElReg/elreg_app/templates/register.html
+++ b/ElReg/elreg_app/templates/register.html
@@ -1,27 +1,29 @@
 {% extends "base.html" %}
 
-
 {% block content %}
-
-<table class="no_shadow_print">
-    <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketUid }}</th></tr>
-    <tr><td>ФИО (Пациент):</td><td colspan="2">{{ patientName }}</td></tr>
-    <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }} г.</td></tr>
-    <tr><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
-    <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
-    <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}, {{ address }}, телефон: {{ current_lpu_phone }}</td></tr>
-    <tr><td>Врач:</td><td colspan="2">{{ doctor }} ({{ speciality }})</td></tr>
-    <tr><td>Дата и время приёма:</td><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
-    <tr><th colspan="3">ВНИМАНИЕ:</th></tr>
+<div class="row-fluid">
+<div class="span10 offset1 no_print">
+<table class="no_shadow_print table">
+    <thead>
+    <tr><th colspan="3"><h4>УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketUid }}</h4></th></tr>
+    </thead>
+    <tr><th>ФИО (Пациент):</th><td colspan="2">{{ patientName }}</td></tr>
+    <tr><th>Дата рождения:</th><td colspan="2">{{ birthday }} г.</td></tr>
+    <tr><th>Полис ОМС:</th><td colspan="2">{{ omiPolicyNumber }}</td></tr>
+    <tr><th colspan="3"><h5>ВЫ ЗАПИСАНЫ НА ПРИЕМ:</h5></th></tr>
+    <tr><th>Лечебное учреждение:</th><td colspan="2">{{ current_lpu_title }},<br/>{{ address }},<br/>телефон: {{ current_lpu_phone }}</td></tr>
+    <tr><th>Врач:</th><td colspan="2">{{ doctor }}<br/>({{ speciality }})</td></tr>
+    <tr><th>Дата и время приёма:</th><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
+    <tr><th colspan="3"><h5>ВНИМАНИЕ:</h5></th></tr>
     <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</td></tr>
     <tr><td colspan="3">С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приёма.</td></tr>
 </table>
 <br />
-<div class="no_print" align="center">
-    <form id="form" action="/" method="post" name="frm">
-        <input type="button" id="btnPrint" class="btnPrint" name="btnPrint" value="Печать" title="Распечатать  уведомление о записи на приём" onClick="window.print();" />
-        <input type="submit" id="button-ready" class="btnReady" name="send" value="Готово" />
-    </form>
+<div class="no_print" align="center" class="form-horizontal">
+    <button type="button" id="btnPrint" class="btn btn-success" name="btnPrint" title="Распечатать уведомление о записи на приём" onClick="window.print();">Распечатать</button>
+    <a href="/" id="button-ready" class="btn" name="send" title="Завершить запись на приём">Готово</a>
+</div>
+</div>
 </div>
 
 <script type="text/javascript">$('div.tabb').attr('class', 'register');</script>
