--- a/ElReg/elreg_app/templates/subdivision.html
+++ b/ElReg/elreg_app/templates/subdivision.html
@@ -1,46 +1,29 @@
 {% extends "base.html" %}
 
-
 {% block content %}
-
-<p>ЛПУ: {{ current_lpu.title }}</p>
-<p>Телефон: {{ current_lpu.phone }}</p>
-<p>Адрес электронной почты: {{ current_lpu.email }}</p>
-<p>
-<table class="commonTable">
-    <tr>
-        <td>
-            <table class="firstTable">
-                {% for subdivision in subdivision_list %}
-                <tr>
-                    <td>
-                        <a id="{{ subdivision.1.0 }}" class="spec">
-                            {{ subdivision.0 }} ({{ subdivision.1.1 }})
-                        </a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </table>
-        </td>
-        <td>
-            <table class="secondTable">
-
-            </table>
-        </td>
-        <td>
-            <table class="thirdTable">
-
-            </table>
-        </td>
-    </tr>
-</table>
-</p>
-<div id="ttt">
-    <p>
-        <a href="{% url medical_institution %}" class="container">
-            <img src="{{ STATIC_URL }}/static/images/back_btn.gif" alt="Назад">
-        </a>
-    </p>
+<blockquote>
+    <dl class="dl-horizontal">
+        <dt>Лечебное учреждение:</dt><dd>{{ current_lpu.title }}</dd>
+        <dt>Телефон:</dt><dd>{{ current_lpu.phone }}</dd>
+        <dt>Электронная почта:</dt><dd><a href="mailto:{{ current_lpu.email }}">{{ current_lpu.email }}</a></dd>
+    </dl>
+</blockquote>
+<div class="well">
+<div class="row-fluid">
+<div class="span4">
+    <ul class="firstTable nav nav-pills nav-stacked">
+        {% for subdivision in subdivision_list %}
+            <li><a id="{{ subdivision.1.0 }}" href="javascript:;" class="spec">{{ subdivision.0 }} ({{ subdivision.1.1 }})</a></li>
+        {% endfor %}
+    </ul>
 </div>
-
+<div class="span4">
+    <ul class="secondTable nav nav-pills nav-stacked"></ul>
+</div>
+<div class="span4">
+    <ul class="thirdTable nav nav-pills nav-stacked"></ul>
+</div>
+</div>
+</div>
+<a href="{% url medical_institution %}" class="btn btn-primary btn-large">Вернуться</a>
 {% endblock %}
