--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -44,7 +44,7 @@
         </div>
         <div class="navbar no_print">
             <div class="navbar-inner">
-                <ul class="nav">
+                <ul class="nav top_path">
                     <li {% if step == 1 %}class="active"{% endif %}>
                         {% if step > 1 %}<a href="{% url index %}">{% else %}<a>{% endif %}<big>МО</big></a>
                     </li>
