--- a/ElReg/elreg_app/templates/register.html
+++ b/ElReg/elreg_app/templates/register.html
@@ -10,18 +10,22 @@
     <tr><th>ФИО (Пациент):</th><td colspan="2">{{ patientName }}</td></tr>
     <tr><th>Дата рождения:</th><td colspan="2">{{ birthday }} г.</td></tr>
     <tr><th>Полис ОМС:</th><td colspan="2">{{ omiPolicyNumber }}</td></tr>
-    <tr><th colspan="3"><h5>ВЫ ЗАПИСАНЫ НА ПРИЕМ:</h5></th></tr>
+    <tr><th colspan="3"><h4>ВЫ ЗАПИСАНЫ НА ПРИЕМ:</h4></th></tr>
     <tr><th>Лечебное учреждение:</th><td colspan="2">{{ current_lpu_title }},<br/>{{ address }},<br/>телефон: {{ current_lpu_phone }}</td></tr>
     <tr><th>Врач:</th><td colspan="2">{{ doctor }}<br/>({{ speciality }})</td></tr>
     <tr><th>Дата и время приёма:</th><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
-    <tr><th colspan="3"><h5>ВНИМАНИЕ:</h5></th></tr>
+    <tr><th colspan="3"><h4>ВНИМАНИЕ:</h4></th></tr>
     <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</td></tr>
     <tr><td colspan="3">С настоящим уведомлением необходимо обратиться в регистратуру лечебного учреждения не менее чем за 15 минут до указанного времени приёма.</td></tr>
 </table>
 <br />
-<div class="no_print" align="center" class="form-horizontal">
-    <button type="button" id="btnPrint" class="btn btn-success" name="btnPrint" title="Распечатать уведомление о записи на приём" onClick="window.print();">Распечатать</button>
-    <a href="/" id="button-ready" class="btn" name="send" title="Завершить запись на приём">Готово</a>
+<div class="no_print" class="form-horizontal">
+    <div class="row-fluid no_print">
+        <div class="span1 no_print"><button type="button" id="btnPrint" class="btn btn-success btn-large" name="btnPrint" title="Распечатать уведомление о записи на приём" onClick="window.print();">Распечатать</button></div>
+        <div class="span1 offset10 no_print"><a href="/" id="button-ready" class="btn btn-large" name="send" title="Завершить запись на приём">Готово</a></div>
+    </div>
+
+
 </div>
 </div>
 </div>
